Added autoaim / added new assets / added recall

--- a/index.html
+++ b/index.html
@@ -350,6 +350,12 @@
                 <div class="spell-lock-overlay">🔒</div>
             </div>
 
+            <!-- Recall Button -->
+            <div id="recall-btn" class="recall-btn" title="Recall (B)">
+                <div class="recall-keybind">B</div>
+                <img id="recall-icon" src="recall_icon.png" alt="Recall">
+            </div>
+
             <!-- Potion Belt Tutorial Hint -->
             <div id="potion-belt-hint" class="potion-belt-hint hidden">
                 <span class="hint-arrow">↓</span><span class="hint-text">Drag potions here</span><button
@@ -545,6 +551,7 @@
     <script src="projectile.js"></script>
     <script src="portal.js"></script>
     <script src="ui.js"></script>
+    <script src="recall.js"></script>
     <script src="game.js"></script>
 
     <script>
