Ghost trail bug fix + death sound

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 
                             <div class="control-item">
                                 <div class="key-display">Q</div>
-                                <div class="control-desc">⚡ Thunderstrike - Lightning spell (unlocked after Deep Mines)
+                                <div class="control-desc">⚡ Thunderstrike - Lightning spell (Needs to be unlocked)
                                 </div>
                             </div>
                             <div class="control-item">
