--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                         <div id="hp-bar" class="bar-fill hp"></div>
                         <div class="bar-text"><span id="hp-text">100/100</span></div>
                     </div>
+                    <div id="hp-loss-indicator"></div>
                 </div>
                 <div class="stat-bar">
                     <div class="bar-label">XP</div>
